# android_dtc_build

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
.github/workflows/: build.yml  upstream.yml
